feat: add plugin architecture that supports custom cell types and custom database connection types in the UI
