# marimo/_server/models/completion.py
@@ -33,7 +33,7 @@ class AiCompletionContext(msgspec.Struct, rename="camel"):
     plain_text: str = ""
 
 
-Language = Literal["python", "markdown", "sql"]
+Language = str
 
 
 UIMessage = dict[str, Any]
